[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/Instrument/Instrument.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Instrument" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Audio" type="AudioStreamPlayer" parent="."]
volume_db = 6.0
bus = "Instrument"

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Instrument_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Instrument_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
